syntax = "proto3";
package com.webank.ai.fate.core.mlmodel.buffer;

option java_outer_classname = "HdpVflModelParamProto";

message HdpVflModelParam{
  map<string,double> weight = 1;
}
